# bevy_game_onlice

./: .gitignore  Cargo.toml  LICENSE  README.md
assets/: registry.json
assets/config/: animation.ron  read_db.ron
assets/scenes/city/: chinese_house.glb
assets/test/: light.glb
bevy_animation/: Cargo.toml
bevy_animation/src/: lib.rs  plugin.rs  structs.rs
bevy_base/: Cargo.toml
bevy_base/src/: structs.rs
bevy_collision/: Cargo.toml
bevy_collision/src/: plugin.rs  structs.rs
bevy_config/: Cargo.toml
bevy_config/src/: lib.rs  plugin.rs  structs.rs
bevy_controller/: Cargo.toml
bevy_controller/src/: lib.rs  plugin.rs  structs.rs
bevy_debug/: Cargo.toml
bevy_debug/src/: lib.rs
bevy_entity_state/: Cargo.toml
bevy_entity_state/src/: lib.rs  plugins.rs  structs.rs
src/: main.rs
